--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -67,7 +67,7 @@ $danger-color               : #ee5f5b;
 $info-color                 : $dark-gray;
 
 /* brands */
-$behance-color              : #1769FF;
+$behance-color              : #1769ff;
 $dribbble-color             : #ea4c89;
 $facebook-color             : #3b5998;
 $flickr-color               : #ff0084;
@@ -76,7 +76,7 @@ $github-color               : #171516;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #517fa4;
 $lastfm-color               : #d51007;
-$linkedin-color             : #0077B5;
+$linkedin-color             : #0077b5;
 $pinterest-color            : #cb2027;
 $rss-color                  : #fa9b39;
 $soundcloud-color           : #ff3300;
