_pages: update about page _sass: fix color map

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -241,7 +241,7 @@ body:hover .visually-hidden button {
 
   .fa-rss,
   .fa-rss-square {
-    color: $linkedin-color;
+    color: $rss-color;
   }
 
   .fa-soundcloud {
