--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -78,7 +78,7 @@ $instagram-color            : #517fa4;
 $lastfm-color               : #d51007;
 $linkedin-color             : #0077b5;
 $pinterest-color            : #cb2027;
-$rss-color                  : #171516;
+$rss-color                  : #9ba1a6;
 $soundcloud-color           : #ff3300;
 $stackoverflow-color        : #fe7a15;
 $tumblr-color               : #32506d;
